--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -59,9 +59,9 @@ jobs:
       - name: Naviserver. Build. Check image and container.
         run: |
           echo "::group::Build image"
-          export IMAGE_TAG="${{ github.sha }}"
-          export IMAGE="${IMAGE_REPOSITORY}/${IMAGE_NAME}:${IMAGE_TAG}"
           echo "Build image"
+          set -a; source ${GITHUB_WORKSPACE}/src/VERSIONS ; set +a;
+          export IMAGE_TAG="${{ github.sha }}"
           cd ${GITHUB_WORKSPACE}/src/hook
           ./build.sh
           echo "::endgroup::"
