--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,18 +1,24 @@
-# * Build Naviserver
-ARG TCL_BUILD_IMAGE_TAG="${TCL_BUILD_IMAGE_TAG:-22.01}"
-  FROM oupfiz5/tcl-build:${TCL_BUILD_IMAGE_TAG} as build
+# * Arguments
+ARG \
+    NS_MODULES_VERSION="${NS_MODULES_VERSION}" \
+    NS_VERSION="${NS_VERSION}" \
+    RL_JSON_VERSION="${RL_JSON_VERSION}" \
+    TCLLIB_VERSION="${TCLLIB_VERSION}" \
+    TCL_BUILD_IMAGE_NAME="${TCL_BUILD_IMAGE_NAME}" \
+    TCL_BUILD_IMAGE_REPOSITORY="${TCL_BUILD_IMAGE_REPOSITORY}" \
+    TCL_BUILD_IMAGE_TAG="${TCL_BUILD_IMAGE_TAG}" \
+    TCL_VERSION="${TCL_VERSION}" \
+    TDOM_VERSION="${TDOM_VERSION}" \
+    THREAD_VERSION="${THREAD_VERSION}" \
+    UBUNTU_IMAGE_NAME="${UBUNTU_IMAGE_NAME}" \
+    UBUNTU_IMAGE_TAG="${UBUNTU_IMAGE_TAG}" \
+    UBUNTU_IMAGE_REPOSITORY="${UBUNTU_IMAGE_REPOSITORY}" \
+    XOTCL_VERSION="${XOTCL_VERSION}"
 
-# ** Args
-ARG NS_VERSION \
-    NS_MODULES_VERSION \
-    RL_JSON_VERSION \
-    TCLLIB_VERSION \
-    TCL_VERSION \
-    TDOM_VERSION \
-    THREAD_VERSION \
-    XOTCL_VERSION
+# * Build software
+FROM ${TCL_BUILD_IMAGE_REPOSITORY}/${TCL_BUILD_IMAGE_NAME}:${TCL_BUILD_IMAGE_TAG} as build
 
-# ** Environments
+# ** Environmen
 ENV NS_VERSION="${NS_VERSION}" \
     NS_MODULES_VERSION="${NS_MODULES_VERSION}" \
     RL_JSON_VERSION_VERSION="${RL_JSON_VERSION_VERSION}" \
@@ -29,19 +35,7 @@ COPY builds /builds
 RUN  /bin/bash /builds/all-build.sh
 
 # * From
-FROM ubuntu:20.04
-
-# ** Arguments
-# ARG BUILD_DATE \
-#     VERSION \
-#     NS_VERSION \
-#     NS_MODULES_VERSION \
-#     RL_JSON_VERSION \
-#     TCLLIB_VERSION \
-#     TCL_VERSION \
-#     TDOM_VERSION \
-#     THREAD_VERSION \
-#     XOTCL_VERSION
+FROM ${UBUNTU_IMAGE_NAME}:${UBUNTU_IMAGE_TAG}
 
 # ** Copy Naviserver
 WORKDIR /
