fix: added stop.sh and tests scripts
FossilOrigin-Name: 93b979fb8365d957e3caac12503c3bb12bb0331433ae96e24d1fb98b22a15622

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,8 +32,7 @@ on:
   workflow_dispatch:
 
 # * Environments
-env:
-  IMAGE_TAG: "${{ github.sha }}"
+# env:
 
 # * Jobs
 jobs:
@@ -61,7 +60,7 @@ jobs:
           echo "::group::Build image"
           echo "Build image"
           set -a; source ${GITHUB_WORKSPACE}/src/VERSIONS ; set +a;
-          export IMAGE_TAG="${{ github.sha }}"
+          export IMAGE="${IMAGE:-${IMAGE_REPOSITORY}/${IMAGE_NAME}:${IMAGE_TAG}}"
           cd ${GITHUB_WORKSPACE}/src/hook
           ./build.sh
           echo "::endgroup::"
