fix: fixed dockerfie
FossilOrigin-Name: 39afad1f51abe6c49bfa931f96d78c18e460c2df5570b325df88c92cbff9c2f9

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,6 @@
 # * Arguments
 ARG \
+    BUILD_DATE="${BUILD_DATE}" \
     NS_MODULES_VERSION="${NS_MODULES_VERSION}" \
     NS_VERSION="${NS_VERSION}" \
     RL_JSON_VERSION="${RL_JSON_VERSION}" \
